--- a/Glass-flowers/style.css
+++ b/Glass-flowers/style.css
@@ -80,7 +80,8 @@ body {
     position: sticky;
     top: 0;
     background-color: gray;
-    height: 33vh;
+    max-height: 50vh;
+    /* max-height: 75vh; */
     background-image: url(/images/flower1.png);
     display: flex;
     background-size: cover;
@@ -88,12 +89,13 @@ body {
     background-repeat: none;
 
     padding: 10rem 0;
-    margin: 10rem 0;
+    margin-bottom: 10rem;
 }
 
 .message-contianer{
     display: flex;
     width: 100%;
+    justify-content: center;
     /* background-color: gray; */
 }
 
@@ -117,10 +119,10 @@ button{
 
 .card-layout {
     display: flex;
-    /* height: 5rem;
-    width: 5rem; */
+
     /* Put a card in the next row when previous cards take all width */
     flex-wrap: wrap;
+    width: 100%;
 
     margin-left: -0.25rem;
     margin-right: -0.25rem;
@@ -131,16 +133,28 @@ button{
 
 .card-layout__item {
     /* There will be 3 cards per row */
-    flex-basis: 33.33333%;
+    flex-basis: 20%;
     height: auto;
-    width: 29vw;
+
     padding-left: 0.25rem;
     padding-right: 0.25rem;
-    margin-left: 5rem;
-    margin-right: 5rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     background-color: aqua;
+    justify-content: space-between;
+
+    height: 100%; 
+    /* width: 5rem; */
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: none;
 }
 
+#flower-holder{
+    background-color: #1b1a1a;
+    background-image: none;
+}
 
 @media screen and (max-width: 900px) {
     .message-contianer{
@@ -155,5 +169,16 @@ button{
 
     .card-layout__item {
         margin-top: 5rem;
+    }
+
+    .card-layout__item {
+        
+        flex-basis: 100%;
+        height: 20vh;
+    }
+    .sticky-sections__section {
+        max-height: 90vh;
+        /* padding: 0; */
+        margin: 0;
     }
 }
