--- a/Glass-flowers/style.css
+++ b/Glass-flowers/style.css
@@ -79,17 +79,18 @@ body {
     /* Stick to the top */
     position: sticky;
     top: 0;
-    background-color: gray;
+    background-color: #222222;
     max-height: 50vh;
     /* max-height: 75vh; */
-    background-image: url(/images/flower1.png);
+    /* background-image: url(/images/flower1.png); */
     display: flex;
     background-size: cover;
     background-position: center;
     background-repeat: none;
 
-    padding: 10rem 0;
-    margin-bottom: 10rem;
+
+    margin-bottom: 5rem;
+
 }
 
 .message-contianer{
@@ -97,16 +98,25 @@ body {
     width: 100%;
     justify-content: center;
     /* background-color: gray; */
+    padding-left: 15vw;
+    padding-right: 15vw;
+    
 }
 
 .message-item{
     width: 50%;
     /* background-color: aquamarine; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     /* margin: auto; */
     margin: 5rem;
+}
+
+.button-item{
+    flex-direction: row;
+    justify-content: flex-end;
 }
 button{
     background-color: transparent;
@@ -116,6 +126,15 @@ button{
     border: none;
 }
 
+button:hover{
+    background-color: white;
+    color: #222222;
+    opacity: .75;
+    cursor: pointer;
+    transition-duration: .4s;
+    transition-timing-function: ease;
+    scale: .99;
+}
 
 .card-layout {
     display: flex;
@@ -133,13 +152,13 @@ button{
 
 .card-layout__item {
     /* There will be 3 cards per row */
-    flex-basis: 20%;
+    /* flex-basis: 20%; */
     height: auto;
 
     padding-left: 0.25rem;
     padding-right: 0.25rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     background-color: aqua;
     justify-content: space-between;
 
@@ -149,36 +168,60 @@ button{
     background-size: cover;
     background-position: center;
     background-repeat: none;
+    aspect-ratio: 2 / 3;
 }
 
 #flower-holder{
-    background-color: #1b1a1a;
+    background-color: #222222;
     background-image: none;
+    padding-top: 5rem;
 }
 
+.card-layout__item:hover{
+    opacity: .5;
+    cursor: pointer;
+}
 @media screen and (max-width: 900px) {
     .message-contianer{
     flex-direction: column;
     margin: 2rem 0;
     align-items: center;
+
+    padding-left: 0vw;
+    padding-right: 0vw;
     }
     .message-item{
     flex-direction: column;
     margin: 2rem 0;
+    width: 70%;
     }
 
     .card-layout__item {
-        margin-top: 5rem;
-    }
-
-    .card-layout__item {
-        
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        margin-left: 14rem;
+        margin-right: 14rem;
         flex-basis: 100%;
-        height: 20vh;
+        height: 25vh;
+        flex-basis: 90%;
     }
     .sticky-sections__section {
-        max-height: 90vh;
+        max-height: 100vh;
         /* padding: 0; */
         margin: 0;
+        text-align: center;
+        padding-top: 0rem;
+        margin-bottom: 0rem;
+    }
+    h1{
+        font-size: 4rem;
+    }
+    h3{
+
+        font-size:1.5rem;
+    }
+
+    #flower-holder {
+        padding-top: 0;
     }
 }
