--- a/Glass-flowers/style.css
+++ b/Glass-flowers/style.css
@@ -116,7 +116,7 @@ body {
 
 .button-item{
     flex-direction: row;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
 }
 button{
     background-color: transparent;
@@ -146,7 +146,7 @@ button:hover{
     margin-left: -0.25rem;
     margin-right: -0.25rem;
     
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -180,6 +180,11 @@ button:hover{
 .card-layout__item:hover{
     opacity: .5;
     cursor: pointer;
+}
+
+h3{
+    max-width: 75%;
+    line-height: 1.5;
 }
 @media screen and (max-width: 900px) {
     .message-contianer{
