--- a/Glass-flowers/style.css
+++ b/Glass-flowers/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .message-item{
-    width: 50%;
+    width: 66%;
     /* background-color: aquamarine; */
     display: flex;
     flex-direction: column;
@@ -115,8 +115,9 @@ body {
 }
 
 .button-item{
+    width: 30%;
     flex-direction: row;
-    /* justify-content: flex-end; */
+    justify-content: flex-end;
 }
 button{
     background-color: transparent;
@@ -222,7 +223,7 @@ h3{
         font-size: 4rem;
     }
     h3{
-
+        max-width: 100%;
         font-size:1.5rem;
     }
 
