--- a/Glass-flowers/style.css
+++ b/Glass-flowers/style.css
@@ -187,6 +187,15 @@ h3{
     max-width: 75%;
     line-height: 1.5;
 }
+
+@media screen and (min-width: 2100px) {
+    .message-item{
+        width: 55%;
+    }
+    h3{
+        max-width: 66%;
+    }
+}
 @media screen and (max-width: 900px) {
     .message-contianer{
     flex-direction: column;
